--- a/.travis.yml
+++ b/.travis.yml
@@ -1,34 +1,17 @@
-# Configuration for running Rose test battery on Travis CI
-# See https://travis-ci.org/ for more info.
-
----
-language: python
+language: python - "2.7"
 
 before_install:
-    - wget 'https://github.com/cylc/cylc/archive/master.tar.gz' -O '/tmp/cylc-master.tar.gz'
-    - tar -xvf '/tmp/cylc-master.tar.gz' -C "${HOME}"
-    - make -C "${HOME}/cylc-master" 'version'
-    - wget 'https://github.com/metomi/fcm/archive/master.tar.gz' -O '/tmp/fcm-master.tar.gz'
-    - tar -xvf '/tmp/fcm-master.tar.gz' -C "${HOME}"
-    - cat >"${HOME}/.bashrc" <<<"export PATH=${PWD}/bin:${HOME}/fcm-master/bin:${HOME}/cylc-master/bin:\$PATH"
+    - echo > "${HOME}/.bashrc"
+    - virtualenv "${HOME}/virtualenv/rose"
+    - echo "source \"${HOME}/virtualenv/rose/bin/activate\"" >> ~/.bashrc
     - source "${HOME}/.bashrc"
-    - ssh-keygen -t 'rsa' -f "${HOME}/.ssh/id_rsa" -N '' -q
-    - cat "${HOME}/.ssh/id_rsa.pub" >>"${HOME}/.ssh/authorized_keys"
-    - ssh-keyscan -t 'rsa' 'localhost' >>"${HOME}/.ssh/known_hosts"
 
+install:
+    - pip install sphinx
+    - pip install travis-sphinx
 
-install: 
-    - sudo apt-get install at build-essential gfortran heirloom-mailx pcregrep
-    - sudo apt-get install -y libxml-parser-perl libconfig-inifiles-perl
-    - sudo apt-get install -y libdbi-perl libdbd-sqlite3-perl
-    - sudo apt-get install python-pip python-dev graphviz libgraphviz-dev python-jinja2 python-sqlalchemy
-    - pip install cherrypy Jinja2 requests simplejson sqlalchemy
-    - pip install pygraphviz --install-option="--include-path=/usr/include/graphviz" --install-option="--library-path=/usr/lib/graphviz/"
-    - pip install pep8
-    - sudo sh -c 'echo "deb http://opensource.wandisco.com/ubuntu `lsb_release -cs` svn19" >> /etc/apt/sources.list.d/subversion19.list'
-    - sudo wget -q http://opensource.wandisco.com/wandisco-debian.gpg -O- | sudo apt-key add -
-    - sudo apt-get update
-    - sudo apt-get install -y subversion
+script:
+    - travis-sphinx --source=doc/sphinx build
 
-script: 
-    - rose test-battery --state=save -j 5 || (echo -e "\n\nRerunning Failed Tests...\n\n"; rose test-battery --state=save,failed -j 5)
+after_success:
+    - travis-sphinx deploy --pullrequests
