--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,9 @@ language: python
 before_install:
     - echo > "${HOME}/.bashrc"
     - virtualenv "${HOME}/virtualenv/rose"
-    - echo "source \"${HOME}/virtualenv/rose/bin/activate\"" >> ~/.bashrc
-    - echo "export PYTHONPATH=\"${HOME/rose/lib/python}\""
+    - echo "source \"${HOME}/virtualenv/rose/bin/activate\"" >> "${HOME}/.bashrc"
+    - echo "export PYTHONPATH=\"${PWD/lib/python}\"" >> "${HOME}/.bashrc"
     - source "${HOME}/.bashrc"
-    - ls "${HOME}"
-    - echo ${PYTHONPATH}
-    - echo ${PWD}
 
 install:
     - pip install sphinx
