--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ script:
     - PYTHONPATH="lib/python" travis-sphinx --source=doc/sphinx build
 
 after_success:
-    - travis-sphinx deploy --pullrequests
+    - travis-sphinx --pullrequests deploy
