travis-sphinx, build this branch,

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ script:
     - PYTHONPATH="lib/python" travis-sphinx --source=doc/sphinx build
 
 after_success:
-    - travis-sphinx --pullrequests deploy
+    - travis-sphinx --pullrequests --branches master,sphinx-build-test deploy
