--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,6 @@ script:
     - PYTHONPATH="lib/python" travis-sphinx --source=doc/sphinx --outdir=doc/sphinx/_build/html build
 
 after_success:
+    - mkdir -p target/doc
+    - ln -s doc/ target/doc/build
     - travis-sphinx --pullrequests --branches master,sphinx-build-test deploy
