--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,15 @@ before_install:
 
 install:
     - pip install sphinx
-    - pip install travis-sphinx
 
 script:
-    - PYTHONPATH="lib/python" travis-sphinx --source=doc/sphinx --outdir=doc/sphinx/_build/html build
+    - # Build Docs.
+    - PYTHONPATH='lib/python' sphinx-build -aEW 'doc/sphinx' 'doc/sphinx/_build'
+    - make -C 'doc/sphinx' html
 
 after_success:
-    - mkdir -p target/doc
-    - ln -s doc/ target/doc/build
-    - travis-sphinx --pullrequests --branches master,sphinx-build-test deploy
+    - # Deploy Docs.
+    - # TODO: Only deploy on merge.
+    - git clone 'https://github.com/davisp/ghp-import'
+    - ./ghp-import/ghp_import.py -n docs
+    - git push -fq "https://${GH_TOKEN}@github.com/${TRAVIS_REPO_SLUG}.git gh-pages"
