--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,4 @@ after_success:
     - # TODO: Only deploy on merge.
     - git clone 'https://github.com/davisp/ghp-import'
     - ./ghp-import/ghp_import.py -n 'doc'
-    - git push -fq "https://${GH_TOKEN}@github.com/${TRAVIS_REPO_SLUG}.git gh-pages"
+    - git push -fq "https://${GH_TOKEN}@github.com/${TRAVIS_REPO_SLUG}.git" gh-pages
