--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,24 @@
 language: python
 
 before_install:
+    # Create .bashrc file.
     - echo > "${HOME}/.bashrc"
     - virtualenv "${HOME}/virtualenv/rose"
     - echo "source \"${HOME}/virtualenv/rose/bin/activate\"" >> "${HOME}/.bashrc"
+    - echo "export PYTHONPATH=lib/python:$PYTHONPATH"
     - source "${HOME}/.bashrc"
 
 install:
     - pip install sphinx
 
 script:
-    - # Build Docs.
-    - PYTHONPATH='lib/python'
+    # Build Docs.
     - sphinx-build -aEW 'doc/sphinx' 'doc/sphinx/_build'
     - make -C 'doc/sphinx' html
 
 after_success:
-    - # Deploy Docs.
-    - # TODO: Only deploy on merge.
+    # Deploy Docs.
+    # TODO: Only deploy on merge.
     - git clone 'https://github.com/davisp/ghp-import'
     - ./ghp-import/ghp_import.py -n 'doc'
     - git push -fq "https://${GH_TOKEN}@github.com/${TRAVIS_REPO_SLUG}.git" gh-pages
