--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,4 @@ script:
     - make -C 'doc/sphinx' html
 
 after_success:
-    # Deploy Docs.
-    # TODO: Only deploy on merge.
-    - git clone 'https://github.com/davisp/ghp-import'
-    - ./ghp-import/ghp_import.py -n 'doc'
-    - git push -fq "https://${GH_TOKEN}@github.com/${TRAVIS_REPO_SLUG}.git" gh-pages
+    - doc/bin/deploy
