--- a/.travis.yml
+++ b/.travis.yml
@@ -20,5 +20,7 @@ after_success:
     # Deploy Docs.
     # TODO: Only deploy on merge.
     - git clone 'https://github.com/davisp/ghp-import'
-    - ./ghp-import/ghp_import.py -n 'doc'
+    - GHP_DIR="$(mktemp -d)"
+    - ln -s "doc" "${GHP_DIR}/doc"
+    - ./ghp-import/ghp_import.py -ln "${GHP_DIR}"
     - git push -fq "https://${GH_TOKEN}@github.com/${TRAVIS_REPO_SLUG}.git" gh-pages
