--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,6 @@ after_success:
     # TODO: Only deploy on merge.
     - git clone 'https://github.com/davisp/ghp-import'
     - GHP_DIR="$(mktemp -d)"
-    - ln -s "doc" "${GHP_DIR}/doc"
+    - ln -s "${PWD}/doc" "${GHP_DIR}/doc"
     - ./ghp-import/ghp_import.py -ln "${GHP_DIR}"
     - git push -fq "https://${GH_TOKEN}@github.com/${TRAVIS_REPO_SLUG}.git" gh-pages
