Added cylc lexer and builtin plugins. * Added experimental Minicylc directive. * Chaged to RTD theme. * Updated latex options. * Changed syntax highlighting theme.

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -43,6 +43,8 @@ sphinx-install:
 	$(tidy-venv)
 	virtualenv --python=python2.7 "$(env-path)"
 	$(venv) pip install sphinx
+	$(venv) pip install sphinx_rtd_theme
+	$(venv) pip install https://github.com/mapio/GraphvizAnim/archive/0.2-alpha.zip
 
 sphinx-activate:
 
