--- a/etc/tutorial/cylc/suite.rc
+++ b/etc/tutorial/cylc/suite.rc
@@ -76,15 +76,16 @@
     [[forecast]]
         script = forecast 120 5  # Generate 5 forecasts at 60 minute intervals.
         [[[environment]]]
+            WIND_CYCLES = """
+                $CYLC_TASK_CYCLE_POINT
+                $(cylc cyclepoint --offset-hours=-3)
+                $(cylc cyclepoint --offset-hours=-6)
+            """
+
             # The cyclepoint 3 hours before the present one.
             PT3H = $(cylc cyclepoint --offset-hours=-3)
             # The cyclepoint 6 hours before the present one.
             PT6H = $(cylc cyclepoint --offset-hours=-6)
-            # --- Science Parameters ---
-            # Effects the way rainfall is interpolated onto the grid
-            SPLINE_LEVEL=0
-            # The weighting to give to each observation set.
-            WEIGHTING = 0.7, 0.2, 0.1
 
     [[post_process<site>]]
         # Generate a forecast for the location <site> 60 minutes in the future.
