--- a/etc/tutorial/consolidation-tutorial/suite.rc
+++ b/etc/tutorial/consolidation-tutorial/suite.rc
@@ -35,22 +35,22 @@
         script = get-observations
         [[[environment]]]
             SITE_ID = 3976
-            API_KEY = d6bfeab3-3489-4990-a604-44acac4d2dfb
+            API_KEY = DATAPOINT_API_KEY
     [[get_observations_camborne]]
         script = get-observations
         [[[environment]]]
             SITE_ID = 3808
-            API_KEY = d6bfeab3-3489-4990-a604-44acac4d2dfb
+            API_KEY = DATAPOINT_API_KEY
     [[get_observations_heathrow]]
         script = get-observations
         [[[environment]]]
             SITE_ID = 3772
-            API_KEY = d6bfeab3-3489-4990-a604-44acac4d2dfb
+            API_KEY = DATAPOINT_API_KEY
     [[get_observations_shetland]]
         script = get-observations
         [[[environment]]]
             SITE_ID = 3005
-            API_KEY = d6bfeab3-3489-4990-a604-44acac4d2dfb
+            API_KEY = DATAPOINT_API_KEY
 
 
     [[consolidate_observations]]
@@ -68,7 +68,7 @@
         [[[environment]]]
             # The key required to get weather data from the DataPoint service.
             # To use archived data comment this line out.
-            API_KEY = d6bfeab3-3489-4990-a604-44acac4d2dfb
+            API_KEY = DATAPOINT_API_KEY
             # Add the `python` directory to the PYTHONPATH.
             PYTHONPATH="$CYLC_SUITE_RUN_DIR/lib/python:$PYTHONPATH"
             # The dimensions of each grid cell in degrees.
