--- a/etc/tutorial/cylc-forecasting-suite/suite.rc
+++ b/etc/tutorial/cylc-forecasting-suite/suite.rc
@@ -7,8 +7,8 @@
         site = exeter
 
 [scheduling]
-    initial cycle point = TODO
-    final cycle point = TODO
+    # TODO - set the initial cycle point.
+    # TODO - set the final cycle point.
     [[dependencies]]
         [[[PT3H]]]
             # Repeat every three hours starting at the initial cycle point.
