--- a/.travis.yml
+++ b/.travis.yml
@@ -44,13 +44,4 @@ jobs:
     include:
     - name: "Test Battery"
       script:
-      - export COVERAGE_PROCESS_START="${TRAVIS_BUILD_DIR}/.coveragerc"
-      # ./bin/rose will change PYTHONPATH, so we cannot rely on that for sitecustomize.py
-      # but instead we can move the sitecustomize.py to the place used as PYTHONPATH
-      - cp "${TRAVIS_BUILD_DIR}/.travis/sitecustomize.py" ./lib/python
-      - export PYTHONPATH="${TRAVIS_BUILD_DIR}/.travis"
-      - coverage run .travis/cover.py
-      - rm ./lib/python/sitecustomize.py
-    - name: "Documentation"
-      script:
-        - rose make-docs --venv --dev --strict clean linkcheck doctest html slides latexpdf
+      - rose test-battery t/docs/02-tutorial-suites.t -v -v
