cli: migrate from Bash to Python
* Convert the main Rose script from Bash to Python.
* Register Python commands as entry points, hardcode Bash commands
  in the main Rose script.
* Update centralised option help text to the more up to date
  help text in the sub commands.

--- a/setup.cfg
+++ b/setup.cfg
@@ -41,3 +41,40 @@ classifiers =
     Programming Language :: Python :: 3.7
     Topic :: Scientific/Engineering :: Atmospheric Science
 python_requires = >=3.7
+
+[options.entry_points]
+# top level shell commands
+console_scripts =
+    rose2 = metomi.rose.scripts.rose:rose
+    rosie2 = metomi.rose.scripts.rose:rosie
+    rosa2 = metomi.rose.scripts.rose:rosa [rosa]
+rose.commands =
+    app-run = metomi.rose.app_run:main
+    app-upgrade = metomi.rose.upgrade:main
+    # check-software = metomi.rose.check_software:main
+    config = metomi.rose.config_cli:main
+    config-diff = metomi.rose.config_diff:main
+    config-dump = metomi.rose.config_dump:main
+    date = metomi.rose.date_cli:main
+    env-cat = metomi.rose.env_cat:main
+    host-select = metomi.rose.host_select:main
+    host-select-client = metomi.rose.host_select_client:main
+    macro = metomi.rose.macro:main
+    metadata-check = metomi.rose.metadata_check:main
+    metadata-gen = metomi.rose.metadata_gen:main
+    metadata-graph = metomi.rose.metadata_graph:main
+    namelist-dump = metomi.rose.namelist_dump:main
+    resource = metomi.rose.resource:main
+    task-env = metomi.rose.task_env:main
+    task-run = metomi.rose.task_run:main
+rosie.commands =
+    checkout = metomi.rosie.vc:checkout
+    create = metomi.rosie.vc:create
+    delete = metomi.rosie.vc:delete
+    disco = metomi.rosie.ws:main
+    go = metomi.rosie.browser:main
+    graph = metomi.rosie.graph:main
+    hello = metomi.rosie.ws_client_cli:hello
+    id = metomi.rosie.suite_id:main
+    lookup = metomi.rosie.ws_client_cli:lookup
+    ls = metomi.rosie.ws_client_cli:list_local_suites
