check-software: migrate into metomi library
* Move this lone Python script from bin/ into metomi/rose and register
  it as an entry point.

--- a/setup.cfg
+++ b/setup.cfg
@@ -51,7 +51,7 @@ console_scripts =
 rose.commands =
     app-run = metomi.rose.app_run:main
     app-upgrade = metomi.rose.upgrade:main
-    # check-software = metomi.rose.check_software:main
+    check-software = metomi.rose.scripts.check_software:main
     config = metomi.rose.config_cli:main
     config-diff = metomi.rose.config_diff:main
     config-dump = metomi.rose.config_dump:main
