cli: remove shell wrapper scripts
* Python sub-commands are now Python entry points executed in the same
  Python session (and not via an intermediate shell).
* Bash sub-commands are now located in metomi.rose.scripts (incl rosa
  sub-commands) and called via subprocess.Popen.
* Re-work the Sphinx extension used to auto-document the CLI to work
  with the new CLI format.

--- a/setup.cfg
+++ b/setup.cfg
@@ -45,13 +45,13 @@ python_requires = >=3.7
 [options.entry_points]
 # top level shell commands
 console_scripts =
-    rose2 = metomi.rose.scripts.rose:rose
-    rosie2 = metomi.rose.scripts.rose:rosie
-    rosa2 = metomi.rose.scripts.rose:rosa [rosa]
+    rose = metomi.rose.rose:rose
+    rosie = metomi.rose.rose:rosie
+    rosa = metomi.rose.rose:rosa [rosa]
 rose.commands =
     app-run = metomi.rose.app_run:main
     app-upgrade = metomi.rose.upgrade:main
-    check-software = metomi.rose.scripts.check_software:main
+    check-software = metomi.rose.check_software:main
     config = metomi.rose.config_cli:main
     config-diff = metomi.rose.config_diff:main
     config-dump = metomi.rose.config_dump:main
