--- a/pyproject.toml
+++ b/pyproject.toml
@@ -122,7 +122,7 @@ rosa = "metomi.rose.rose:rosa"
 "config" = "metomi.rose.config_cli:main"
 "config-diff" = "metomi.rose.config_diff:main"
 "config-dump" = "metomi.rose.config_dump:main"
-"config-edit" = "metomi.rose.config_editor.main:main"
+"config-edit" = "metomi.rose.config_editor.main:main [edit]"
 "date" = "metomi.rose.date_cli:main"
 "env-cat" = "metomi.rose.env_cat:main"
 "host-select" = "metomi.rose.host_select:main"
