--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,8 +40,18 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v5
 
-      # install system dependencies ONLY
-      - name: Install System Dependencies
+      # Note: Mac OS already has required deps pre-installed
+      - name: Install Ubuntu dependencies
+        if: startsWith(matrix.os, 'ubuntu')
+        run: |
+         sudo apt-get update
+         sudo apt install -y \
+            libgirepository-2.0-dev \
+            libcairo2-dev \
+            pkg-config \
+            gir1.2-gtk-3.0
+
+      - name: Install Python
         uses: mamba-org/setup-micromamba@v2
         with:
           cache-environment: true
@@ -50,8 +60,6 @@ jobs:
           init-shell: bash
           create-args: >-
             python=${{ matrix.python }}
-            gtk3>=3.24.43
-            cairo
 
       - name: Build
         uses: cylc/release-actions/build-python-package@v1
